Safari365 Prod/src/objects/SettingsToDeleteRecord__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue__c</fullName>
        <label>FieldValue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TestCase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TestCase</label>
        <type>Checkbox</type>
    </fields>
    <label>SettingsToDeleteRecord</label>
    <pluralLabel>SettingsToDeleteRecords</pluralLabel>
</CustomObject>